[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.5"
diesel = { version = "2.1.6", features = ["postgres", "r2d2","uuid"] }
dotenvy = "0.15"
serde = { version = "1.0.198", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4","serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
env_logger = "0.11.3"
rand = "0.8.5"